objects/SVMXC__Service_Order__c.object
<CustomObject>
    <customHelp>SVMXC__SVMXC_LaunchHelp</customHelp>
    <description>Service Order is used to plan, execute and manage Service events for Field and Depot Service activities. Depending upon the service scenario, the order creation can be triggered by many events: When creating a Support Case, when one or more installed products require periodic service or calibration, when troubleshooting a customer problem on the field, if the field service engineer learns that the product requires specialized conditions of a factory/depot to resolve the problem, or when a new/repair shipment to customer requires specialized installation activity.</description>
    <fields>
        <fullName>Accepted_Date_Time__c</fullName>
        <label>Accepted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Access_Checked__c</fullName>
        <label>Access Checked</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airway_Bill_Number__c</fullName>
        <description>Airway Bill Number - for RMA from Customer site to Vendor or Cadence</description>
        <inlineHelpText>Airway Bill Number - for RMA from Customer site to Vendor or Cadence</inlineHelpText>
        <label>Airway Bill Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>CCR_Link__c</fullName>
        <formula>HYPERLINK(&apos;http://ccmsutil.cadence.com/cgi-bin/ccrprint.cgi?ccrId=&apos; &amp;  CCR_Number__c , CCR_Number__c)</formula>
        <label>CCR Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCR_Number__c</fullName>
        <inlineHelpText>CCR Number must start with &apos;CCMPR&apos;</inlineHelpText>
        <label>CCR Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cadence_CM_FA_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Component Failure analysis required from Manufacturing Vendor.</description>
        <inlineHelpText>Check if the Component Failure analysis required from Manufacturing Vendor.</inlineHelpText>
        <label>Component Failure Analysis Required ?</label>
        <type>Checkbox</type>
    </fields>
     <fields>
        <fullName>Cadence_Reported_Issue_replicated_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Reported Issue Could be Replicated</description>
        <inlineHelpText>Check if the Reported Issue Could be Replicated</inlineHelpText>
        <label>Reported Issue Replicated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cadence_date_Received_at_Vendor_C__c</fullName>
        <description>Date Received at Vendor for repairs / recertification</description>
        <inlineHelpText>Date Received at Vendor for repairs / recertification</inlineHelpText>
        <label>Date Received at Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cadence_Date_Required_C__c</fullName>
        <description>Date the repaired material is required from Vendor</description>
        <inlineHelpText>Date the repaired material is required from Vendor</inlineHelpText>
        <label>Date Required from Vendor</label>
        <type>Date</type>
    </fields>   
    <fields>
        <fullName>Cadence_PO_Number__c</fullName>
        <description>Cadence PO Number</description>
        <inlineHelpText>Cadence PO Number to vendor.</inlineHelpText>
        <label>Cadence PO Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cadence_Quantity_Processed__c</fullName>
        <description>Quantity Processed</description>
        <inlineHelpText>Quantity Processed by vendor / Production team ( includes defective pieces). It is expected that an individual WO would be created for defective part for recording results /disposition.</inlineHelpText>
        <label>Quantity Processed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields> 
    <fields>
        <fullName>Cadence_Reference_MT__c</fullName>
        <description>Cadence Reference MT</description>
        <inlineHelpText>Cadence Reference- Warehouse  Material Transfer Note</inlineHelpText>
        <label>Cadence Reference MT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Not_in_System__c</fullName>
        <label>Code Not in System</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Y_N__c</fullName>
        <inlineHelpText>Corrective action needed?</inlineHelpText>
        <label>Corrective Action Y/N</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Process_Status__c</fullName>
        <description>Current Process Status</description>
        <inlineHelpText>Current Process Status of the material under this WO</inlineHelpText>
        <label>Current Process Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Priority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_Location_Reference_Designator__c</fullName>
        <description>Location on board; capacitors/resistors, small components</description>
        <inlineHelpText>What is the location on board of failed component?</inlineHelpText>
        <label>Device Location Reference Designator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Version__c</fullName>
        <description>Diagnostic Version</description>
        <inlineHelpText>Diagnostic Version</inlineHelpText>
        <label>Diagnostic Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UXE111</fullName>
                </value>
                <value>
                    <fullName>UXE121</fullName>
                </value>
                <value>
                    <fullName>UXE131</fullName>
                </value>
                <value>
                    <fullName>IXE521-Q5</fullName>
                </value>
                <value>
                    <fullName>IXE521-Q6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagnostics_Patch_Number__c</fullName>
        <description>Diagnostic Patch Number</description>
        <inlineHelpText>Diagnostic Patch Number</inlineHelpText>
        <label>Diagnostics Patch Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnostics__c</fullName>
        <label>Diagnostics</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_Notes__c</fullName>
        <description>Dispatchers can use this field to pass information to the Technician when the Dispatcher schedules the WO.</description>
        <inlineHelpText>Dispatchers can use this field to pass information to the Technician when the Dispatcher schedules the WO.</inlineHelpText>
        <label>Dispatch Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ECO_Applied__c</fullName>
        <description>ECO Applied</description>
        <label>ECO Applied</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECO_Description__c</fullName>
        <description>ECO Description Field</description>
        <inlineHelpText>Enter ECO Description Information</inlineHelpText>
        <label>ECO Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_1__c</fullName>
        <label>Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_3__c</fullName>
        <label>Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expected_Arrival__c</fullName>
        <label>Expected Arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSR_Status__c</fullName>
        <label>FSR Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Code_Second_Level__c</fullName>
        <description>Failure Code Second Level</description>
        <label>Failure Code Second Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Failure_Code__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>12V PSU</fullName>
                </value>
                <value>
                    <fullName>24V PSU</fullName>
                </value>
                <value>
                    <fullName>27V Path</fullName>
                </value>
                <value>
                    <fullName>27V PSU</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
                <value>
                    <fullName>Board Level</fullName>
                </value>
                <value>
                    <fullName>Bootup</fullName>
                </value>
                <value>
                    <fullName>bracket</fullName>
                </value>
                <value>
                    <fullName>Burnt</fullName>
                </value>
                <value>
                    <fullName>Chip</fullName>
                </value>
                <value>
                    <fullName>Connector</fullName>
                </value>
                <value>
                    <fullName>Contaminated</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>C-Stack</fullName>
                </value>
                <value>
                    <fullName>Customer Power</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>DCB</fullName>
                </value>
                <value>
                    <fullName>Dead on Arrival</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>DIAG</fullName>
                    <default>true</default>
                    <label>DIAG</label>
                </value>
                <value>
                    <fullName>Diags</fullName>
                </value>
                <value>
                    <fullName>DIMMs</fullName>
                </value>
                <value>
                    <fullName>Down Rev</fullName>
                </value>
                <value>
                    <fullName>EDRAM</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Electronic ID</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Failed MEMS Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Code_Third_Level__c</fullName>
        <description>Third Level Failure Code</description>
        <label>Failure Code Third Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Failure_Code_Second_Level__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>12V Path</fullName>
                </value>
                <value>
                    <fullName>24V Path</fullName>
                </value>
                <value>
                    <fullName>27V Path</fullName>
                </value>
                <value>
                    <fullName>ABIST</fullName>
                </value>
                <value>
                    <fullName>Air Condition</fullName>
                </value>
                <value>
                    <fullName>Alarm</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>Bent</fullName>
                </value>
                <value>
                    <fullName>Burn mark</fullName>
                </value>
                <value>
                    <fullName>Burnt</fullName>
                </value>
                <value>
                    <fullName>CDP</fullName>
                </value>
                <value>
                    <fullName>CDP Cable</fullName>
                </value>
                <value>
                    <fullName>Chassis</fullName>
                </value>
                <value>
                    <fullName>Chip</fullName>
                </value>
                <value>
                    <fullName>Contaminated</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>C-stack</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>DCB</fullName>
                </value>
                <value>
                    <fullName>DCC</fullName>
                </value>
                <value>
                    <fullName>DCC_CON1</fullName>
                </value>
                <value>
                    <fullName>DCC_CON2</fullName>
                </value>
                <value>
                    <fullName>DCC_CON3</fullName>
                </value>
                <value>
                    <fullName>Dcc_con 4</fullName>
                </value>
                <value>
                    <fullName>DCC_MEM</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>down rev</fullName>
                </value>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Code__c</fullName>
        <label>Failure Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ART</fullName>
                </value>
                <value>
                    <fullName>B2B Cable</fullName>
                </value>
                <value>
                    <fullName>Back Plane</fullName>
                </value>
                <value>
                    <fullName>Buffer Cable</fullName>
                </value>
                <value>
                    <fullName>Buffer Card</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>CDP</fullName>
                </value>
                <value>
                    <fullName>Chassis</fullName>
                </value>
                <value>
                    <fullName>Clock Cable</fullName>
                </value>
                <value>
                    <fullName>Cooling</fullName>
                </value>
                <value>
                    <fullName>Cover</fullName>
                </value>
                <value>
                    <fullName>DCC</fullName>
                </value>
                <value>
                    <fullName>Down Rev Part</fullName>
                </value>
                <value>
                    <fullName>Fan</fullName>
                </value>
                <value>
                    <fullName>HDDC</fullName>
                </value>
                <value>
                    <fullName>Interposer</fullName>
                </value>
                <value>
                    <fullName>Logic Board</fullName>
                </value>
                <value>
                    <fullName>MBS Box</fullName>
                </value>
                <value>
                    <fullName>MBS Cable</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NCC</fullName>
                </value>
                <value>
                    <fullName>NMP</fullName>
                </value>
                <value>
                    <fullName>OCA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PDU</fullName>
                </value>
                <value>
                    <fullName>PSC</fullName>
                </value>
                <value>
                    <fullName>PS Shelf</fullName>
                </value>
                <value>
                    <fullName>PSU</fullName>
                </value>
                <value>
                    <fullName>PXP</fullName>
                </value>
                <value>
                    <fullName>SA Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Description__c</fullName>
        <description>Defect that caused the symptoms</description>
        <inlineHelpText>Description of the failure (defect) that caused symptoms described in the Problem Description.</inlineHelpText>
        <label>Failure Symptoms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HFE_Resolution__c</fullName>
        <label>HFE Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <formula>SVMXC__Component__r.Host_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Workstation__c</fullName>
        <label>Host Workstation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes, uname-a done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>House_Water__c</fullName>
        <label>House Water</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Root_Access__c</fullName>
        <label>IT/Root Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>To be Arranged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Parts_Ordered__c</fullName>
        <label>Install Parts Ordered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Report_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Report Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Status__c</fullName>
        <label>Install Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Checklist_IP_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installation Checklist (IP) Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installed_Product_Name__c</fullName>
        <formula>SVMXC__Component__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Product_Status__c</fullName>
        <description>Installed Product&apos;s Status</description>
        <formula>TEXT(SVMXC__Component__r.SVMXC__Status__c)</formula>
        <inlineHelpText>Installed Product&apos;s Status</inlineHelpText>
        <label>Installed Product Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Priority__c</fullName>
        <description>Cadence Priority</description>
        <inlineHelpText>Internal Priority</inlineHelpText>
        <label>Cadence Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Occurrence_Date__c</fullName>
        <label>Issue Occurrence Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lab_Cooling__c</fullName>
        <label>Lab Cooling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Notification_Date__c</fullName>
        <defaultValue>Now()+ 7 - 1/24</defaultValue>
        <label>Last Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lifter__c</fullName>
        <label>Lifter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-Site</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	 <fields>
        <fullName>Location_City__c</fullName>
        <formula>SVMXC__Site__r.SVMXC__City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Country__c</fullName>
        <formula>Text(SVMXC__Site__r.SVMXC__Country__c)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <formula>SVMXC__Site__r.SVMXC__State__c</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Street__c</fullName>
        <formula>SVMXC__Site__r.SVMXC__Street__c</formula>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Zip__c</fullName>
        <formula>SVMXC__Site__r.SVMXC__Zip__c</formula>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFG_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MFG Approval</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>startsWith</operation>
                <value>ServiceMax</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Production Manager 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MFG_Disposition_Text__c</fullName>
        <label>MFG Disposition Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MFG_Disposition__c</fullName>
        <description>MFG Disposition</description>
        <inlineHelpText>MFG Disposition</inlineHelpText>
        <label>MFG Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRB_Material_Disposition__c</fullName>
        <description>MRB Material Disposition</description>
        <inlineHelpText>MRB Material Disposition</inlineHelpText>
        <label>MRB Material Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use As Is</fullName>
                </value>
                <value>
                    <fullName>De-kit and stock</fullName>
                </value>
                <value>
                    <fullName>Move to MFG/Test for further evaluation</fullName>
                </value>
                <value>
                    <fullName>Move to MHV</fullName>
                </value>
                <value>
                    <fullName>Move to Product Engineering for further evaluation</fullName>
                </value>
                <value>
                    <fullName>Move to Viper Group</fullName>
                </value>
                <value>
                    <fullName>MRB</fullName>
                </value>
                <value>
                    <fullName>Product Engineering</fullName>
                </value>
                <value>
                    <fullName>Retest and restock, if acceptable</fullName>
                </value>
                <value>
                    <fullName>Retest w/stand alone test</fullName>
                </value>
                <value>
                    <fullName>Return to vendor</fullName>
                </value>
                <value>
                    <fullName>Rework and retest</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>Rework after stand alone passes</fullName>
                </value>
                <value>
                    <fullName>RTV - Return to Vendor</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
                <value>
                    <fullName>Upgrade to current revision</fullName>
                </value>
                <value>
                    <fullName>Verify failure, create new line on disposition</fullName>
                </value>
                <value>
                    <fullName>Verify failure on stand alone tester</fullName>
                </value>
                <value>
                    <fullName>Convert to Refurb</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Number_Text__c</fullName>
        <label>Material Number Text</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <formula>SVMXC__Component__r.SVMXC__Product__r.Product_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material_Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Materials Approval</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>startsWith</operation>
                <value>ServiceMax</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Production Manager 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Materials_Disposition_Text__c</fullName>
        <label>Materials Disposition Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Materials_Disposition__c</fullName>
        <description>Materials Disposition</description>
        <inlineHelpText>Materials Disposition</inlineHelpText>
        <label>Materials Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>